--- a/src/pages/planes/mx.astro
+++ b/src/pages/planes/mx.astro
@@ -9,6 +9,7 @@ import FB from '../../assets/facebook.png'
 import IG from '../../assets/insta.png'
 import YT from '../../assets/yt.png'
 import Footer from '../../components/Footer.astro'
+import PlanesMx from '../../components/main/planesMX'
 ---
 
 <Layout title="Planes Terapia Psicologica">
@@ -35,7 +36,8 @@ import Footer from '../../components/Footer.astro'
 		<div class="my-8 text-center text-sm leading-normal text-black">
 			Puedes hacer el pago directamente aquí en la página web
 		</div>
-		<div class="flex flex-col gap-8 pb-8 md:flex-row md:gap-16 md:pb-48">
+		<PlanesMx client:load />
+		<!-- <div class="flex flex-col gap-8 pb-8 md:flex-row md:gap-16 md:pb-48">
 			<PlanCard
 				plan="(Plan Lite)"
 				price="$800 pesos"
@@ -55,7 +57,19 @@ import Footer from '../../components/Footer.astro'
 					selected
 				/>
 			</div>
-		</div>
+			<div>
+				<PlanCard
+					plan="(Plan Especial)"
+					price="$6000 pesos"
+					description={[
+						'10 sesiones individuales de terapia.',
+						'Acompañamiento de mensajería durante el proceso.',
+						'Una llamada de emergencia de 15 minutos.'
+					]}
+					link="https://buy.stripe.com/9B67sL7eJ1LnaGdenXe7m0C"
+				/>
+			</div>
+		</div> -->
 	</div>
 	<Footer />
 </Layout>
